# pastebin_cpy

./: .gitignore  CMakeLists.txt  HashGenerator.cpp  HashGenerator.h  README.md  config.h  docker-compose.yaml
.github/workflows/: build_reader.yaml  style_reader.yaml  ut_reader.yaml
amazon_s3/: AwsCommands.cpp  AwsCommands.h
bot/: commands.cpp  commands.h  commands_data.h  config.h  inline_keyboard.cpp  inline_keyboard.h  main.cpp
bot/aws_connect/: aws_connect.cpp  aws_connect.h
bot/bot_commands/: commands.cpp  commands.h  (+5 more)
cache/: cache.cpp
codestyle_checker/: .clang-tidy  config.json
docker/: docker_postgres_init.sql
docs/: Docker.md  Scripts.md  Style.md
file_commands/: base64.cpp  file_commands.cpp  file_commands.h
files/: make_files.cpp  make_files.h
methods/: methods.cpp  methods.h
proto/: server.proto
redis/: redis_actions.cpp  redis_actions.h
samples/telegramBotCpp/: CMakeLists.txt  config.h
samples/telegramBotCpp/bot/: main.cpp
samples/telegramBotCpp/bot/bot_commands/: commands.cpp  commands.h  my_pastes.cpp  new_paste.cpp  watch_paste.cpp
samples/telegramBotCpp/bot/inline_keyboards/: inline_keyboard.cpp  inline_keyboard.h
samples/telegramBotCpp/bot/redis_relation/: redis_relation.cpp  redis_relation.h
samples/telegramBotCpp/bot/settings/: file_settings.h  keyboards_settings.h
samples/telegramBotCpp/file_commands/: file_commands.cpp  file_commands.h
samples/telegramBotCpp/grpc_connect/: client.cpp  client.h
samples/telegramBotCpp/redis/: redis_actions.h
scripts/: build.sh  destroy.sh  rebuild.sh  run.sh  test.sh
sql_con/: pqxx_select_ex.cpp  sql_actions.cpp  sql_actions.h
src/: CMakeLists.txt  config.h  config.hpp  server.cpp
src/amazon_s3/: AwsActions.cpp  AwsActions.hpp  AwsCommands.cpp  AwsCommands.h  CMakeLists.txt
src/amazon_s3/tests/: aws_actions_tests.cpp  aws_commands_tests.cpp
src/cache/: CMakeLists.txt  cache.cpp
src/cache/tests/: cache_tests.cpp
src/file_interaction/: CMakeLists.txt  base64.h
src/file_interaction/file_commands/: CMakeLists.txt  base64.cpp  base64.hpp  file_commands.cpp  file_commands.hpp
src/file_interaction/file_commands/tests/: base64_tests.cpp  file_commands_test.cpp
src/file_interaction/random_string_generator/: CMakeLists.txt  generator.cpp  generator.hpp
src/file_interaction/tests/: base64_tests.cpp  file_commands_test.cpp  generator.hpp  helper.cpp  helper.h  zip_base64_tests.cpp
src/file_interaction/zip_compression/: CMakeLists.txt  zip_compression.cpp  zip_compression.hpp
src/file_interaction/zip_compression/tests/: zip_compression_tests.cpp
src/reader/: CMakeLists.txt  paste_types.hpp
src/reader/interfaces/: CMakeLists.txt  cache_metadata.hpp  cache_metadata_interface.hpp  cache_text.hpp  cache_text_interface.hpp  factory.hpp  factory_interface.hpp  reader.hpp  reader_interface.hpp
src/reader/scripts/: build.sh  config.sh  destroy.sh  rebuild.sh  run.sh  style.sh  test.sh
src/reader/src/: CMakeLists.txt
src/reader/src/reader/: CMakeLists.txt  factory.hpp  reader.cpp  reader.hpp
src/reader/src/reader/tests/: CMakeLists.txt
src/reader/src/reader/tests/benchmark/: CMakeLists.txt  reader_benchmark.cpp
src/reader/src/reader/tests/benchmark/fakes/: cache_metadata.hpp  cache_text.hpp  factory.hpp
src/reader/src/reader/tests/benchmark/implementations/: CMakeLists.txt  reader_manual_virtual_dispatch.cpp  reader_manual_virtual_dispatch.hpp  reader_sbo.cpp  reader_sbo.hpp  reader_type_erasure_without_optimizations.cpp  reader_type_erasure_without_optimizations.hpp
src/reader/src/reader/tests/units/: reader_tests.cpp
src/reader/src/reader/tests/units/mocks/: cache_metadata_mock.hpp  cache_text_mock.hpp  factory_mock.hpp
src/reader/src/reader/tests/ut/: CMakeLists.txt  reader_tests.cpp
src/reader/src/reader/tests/ut/mocks/: cache_metadata_mock.hpp  cache_text_mock.hpp  factory_mock.hpp
src/reader/src/reader/tests/utility/: random_paste_generator.cpp  random_paste_generator.hpp
src/reader/src/server/: CMakeLists.txt  server.cpp  server.hpp
src/reader/src/server/proto/: server.proto
src/reader/src/server/tests/ut/: CMakeLists.txt  server_tests.cpp
src/reader/src/server/tests/ut/mocks/: reader_mock.hpp
src/reader/utility/: CMakeLists.txt  comparisition_paste_types.hpp  random_paste_generator.cpp  random_paste_generator.hpp
src/reader/utility/random/: CMakeLists.txt  random_paste_generator.cpp  random_paste_generator.hpp
src/reader/utility/validate/: CMakeLists.txt  validate.cpp  validate.hpp
src/redis/: CMakeLists.txt  redis.cpp  redis.h  redis.hpp  redis_actions.cpp  redis_actions.h  redis_actions.hpp
src/redis/tests/: redis_actions_test.cpp  redis_actions_tests.cpp  redis_test.cpp
src/server/: CMakeLists.txt  server.cpp
src/server/interfaces/: CMakeLists.txt  storage_interface.hpp
src/server/methods/: CMakeLists.txt  methods.cpp  methods.h  methods.hpp
src/server/methods/aws_connect/: aws_connect.cpp  aws_connect.h
src/server/methods/paste_data/: PasteData.cpp  PasteData.hpp
src/server/methods/redis_settings/: CMakeLists.txt  RedisSettings.hpp
src/server/methods/settings/: CMakeLists.txt  DefaultServices.hpp  RedisSettings.hpp  redis.hpp
src/server/methods/sql_cache_interface/: sql_cache_interface.cpp  sql_cache_interface.h  sql_cache_interface.hpp
src/server/methods/sql_relation/: sql_relation.cpp  sql_relation.h
src/server/methods/tests/: aws_connection_tests.cpp  paste_data_tests.cpp  sql_cache_interface_tests.cpp  sql_relation_tests.cpp
src/server/proto/: server.grpc.pb.cc  server.grpc.pb.h  server.pb.cc  server.pb.h  server.proto
src/sql_con/: CMakeLists.txt  sql_actions.cpp  sql_actions.h  sql_actions.hpp  sql_interface.cpp  sql_interface.hpp
src/sql_con/hash_generate/: HashGenerator.cpp  HashGenerator.h  HashGenerator.hpp
src/sql_con/tests/: hash_generate_tests.cpp  sql_actions_tests.cpp  sql_interface_test.cpp
src/tools/: CMakeLists.txt  ConnectionPool.hpp  KeyManager.hpp
src/tools/tests/: connection_pool_tests.cpp  key_manager_tests.cpp
validate/: validate_uniq_code.cpp  validate_uniq_code.h
(+39 files in other folders)
